gcc/testsuite/g++.dg/parse/error37.C
@@ -1,0 +1,5 @@
+/* PR c++/42054 */
+/* { dg-do "compile" } */
+
+template<int int> struct A; /* { dg-error "two or more" } */
+template<int int> struct A; /* { dg-error "two or more" } */
